public/styles.css
:root {
    --primary: rgb(0, 76, 15);
    --secondary: rgb(2, 135, 4);
    --header-height: 6rem;
}

* {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}




html, body {
    margin: 0;
    width: 100%;
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: white;
    background-image: linear-gradient(to right, var(--primary), var(--secondary));
    padding: 2rem 5rem;
    height: var(--header-height);
}

h1 {
    margin: 0;
}

h1 a {
    text-decoration: none;
    color: white;
}

.landing-main {
    padding: 2rem 3rem 3rem 4rem;
    margin: 3rem 0 0 4rem;
    max-width: 60rem;
    width: 100%;
    border: 4px solid var(--secondary);
    border-radius: 10px;
}

ul {
    margin-bottom: 3rem;
}

li {
    margin-bottom: 0.5rem;
}

.btn, .btn--outline, .btn--small {
    display: inline-block;
    background-color: var(--primary);
    color: white;
    padding: 0.8rem 3rem;
    border-radius: 50px;
    cursor: pointer;
    text-align: center;
    border: none;
}

.btn--outline {
    color: black;
    background-color: white;
    box-shadow: inset 0 0 0 3px var(--primary);

}

.btn--small {
    padding: 0.2rem 0.4rem;
}

.btn-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
}

a {
    text-decoration: none;
}

.form-container {
    display: block;
    margin: 6rem auto;
    min-width: 40rem;
    width: fit-content;
    padding: 2rem 3rem 3rem 4rem;
    border: 4px solid var(--secondary);
    border-radius: 10px;
}

.form-row {
    display: block;
    margin-bottom: 2rem;
}
.form-row label {
    display: block;
}

.form-row input {
    display: block;
    width: 100%;
}

.container {
    display: flex;
    width: 100%;
    height: calc(100vh - var(--header-height));
}

.sidebar {
    display: flex;
    flex-direction: column;
    min-width: fit-content;
    border-right: 6px solid var(--primary);
    padding: 1.5rem;
    height: 100%;
    min-height: 0;
    overflow-y: auto;
}

.sidebar .btn {
    margin-bottom: 1.5rem;

}

.add-data {
    border: 2px solid var(--primary);
    border-radius: 10px;
    padding: 1rem;
    width:fit-content;
    margin-bottom: 1.5rem;
}

.add-data input {
    display: block;
    margin-bottom: 0.5rem;
}

.add-data .btn {
    margin-bottom: 0;
    padding: 0.5rem 1rem;
    display: block;
    margin-left: auto;
}

input[type="File"] {
    display: none;
}

.file-container {
    position: relative;
    flex-grow: 1;
    padding: 2rem;

}

.empty {
    position: absolute; 
    right: 50%;
    top: 50%;
    transform: translate(50%, -50%);
}

.w-100 {
    width: 100%;
}

.flex-container {
    display: flex;
    gap: 1rem;
    align-items: center;
}

table {
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    font-size: large;
}

tr {
    border-bottom: 1px solid black;
}

tr .edit-form {
    width: 100%;
}

tr input {
    font-size: inherit;
    border: none;
    box-shadow: 0 0 0 2px  var(--primary);
    padding: 0.2rem 0.5rem;
    width: 100%;
    margin-bottom: 0.5rem;
    border-radius: 5px;
    
}

tr .btn-container {
    visibility: hidden;
}

tr:hover .btn-container {
    visibility: visible;
}

.folder-row {
    position: relative;

}

.folder-row a {
    color: black;
    cursor: unset;
}

.folder-link::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;

}

td {
    padding: 0.5rem;
}

thead {
    font-weight: bold;
}

.column-name {
    width: 40%;
}

.icon--download,
.icon--rename,
.icon--share,
.icon--delete,
.icon--folder,
.icon--file,
.icon--restore {
    display: inline-block;
    width: 1.5rem;
    height: 1.5rem;
    border: none;
    background-size: cover;
    background-color: unset;
    flex-shrink: 0;
}

.icon--download {
    background-image: url(download-svgrepo-com.svg);
}

.icon--rename {
    background-image: url(paper-and-pen-svgrepo-com.svg);
}

.icon--share {
    background-image: url(share-nodes-svgrepo-com.svg);
}

.icon--delete {
    background-image: url(trash-alt-svgrepo-com.svg);
}

.icon--folder {
    background-image: url(folder-svgrepo-com.svg);
}

.icon--file {
    background-image: url(file-svgrepo-com.svg);
}

.icon--restore {
    background-image: url(restore-svgrepo-com.svg);
}

.btn-icon {
    position: relative;
    cursor: pointer;
    z-index: 2;
}

.file-path {
    margin-bottom: 1rem;
    display: inline-block;
    max-width: 100%;
}

.file-path a {
    text-wrap: wrap;
    overflow-wrap: break-word;
}

.item-name {
    margin-left: 0.5rem;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

}

